removing theme, fixed spacing on go-on app

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -33,7 +33,7 @@ video {
 /*experimental logo*/
 
 .stage {
-	height: 300px;
+	height: 240px;
 	width: 500px;
 	margin: auto;
 	perspective: 9999px;
